# pyre

./: .env  .env.example  Makefile  docker-compose.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: analytics.py  auth.py  checkins.py  health.py  me.py  teams.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: models.py  session.py
backend/app/schemas/: analytics.py  checkin.py
backend/app/ws/: manager.py
deploy/docker/: Dockerfile.api  Dockerfile.web
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CheckinCard.tsx  Layout.tsx  Navbar.tsx
frontend/src/features/analytics/: Overview.tsx
frontend/src/features/auth/: Login.tsx
frontend/src/features/checkins/: CheckinForm.tsx  TeamFeed.tsx
frontend/src/lib/: api.ts  auth.ts  useAuth.tsx  ws.ts
frontend/src/pages/: Analytics.tsx  Login.tsx  NotFound.tsx  TeamFeed.tsx
